css/index.css
/* ... */
.nav img {
    float: left;
    width: 60px;
    height: 60px;
}
.nav ul {
    text-align: center;
    float: left;
    margin: 0;
    padding: 0;
    margin-top: 20px;
    margin-left: 75px;
    list-style-type: none;
}
.nav ul li {
    text-transform: uppercase;
    float: left;
    margin-right: 30px;
}
.nav ul li a {
    text-decoration: none;
    color: #2D2D2D;
    transition: all 0.1s ease-in-out;
}
.nav ul li a:hover {
    color: #7ab800;
}
.nav ul li .active {
    color: #7ab800;
    transition: color 0.2s ease-in-out;
}
.nav ul li .osoc-bold {
    font-weight: 700;
    text-transform: none;
}
.nav .nav-toggle {
    display: none;
}
@media screen and (max-width: 768px) {
    .nav {
        position: relative !important;
        width: auto !important;
    }
    .nav .oSoc-logo {
        display: inline-block;
        width: 100% !important;
    }
    .nav .oSoc-logo img {
        display: block;
        text-align: center;
        margin-left: 0 !important;
        margin-right: auto !important;
        padding-bottom: 0px !important;
    }
    .nav .nav-toggle {
        margin-top: 8px;
        display: block;
    }
    .nav .nav-toggle:hover {
        cursor: pointer;
        cursor: hand;
    }
    .nav ul {
        display: none;
        float: none;
        width: 100%;
        margin: 0;
    }
    .nav ul li {
        float: none;
        display: block;
        background-color: #FFF;
        padding: 10px;
        margin: 0;
    }
}
/* =============================
* BUTTONS
* ============================== */

.btn-primary,
.big-participate {
    width: auto;
    font-size: 1.3em;
    font-weight: bold;
    background-color: #7ab800;
    padding: 10px 15px;
    color: #FFF;
    border-radius: 10px;
    text-align: center;
    text-decoration: none;
}
.big-participate {
    display: block;
    background-color: $color-red;
    padding: 25px;
    border-radius: 5px;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    width: 15em;
}
.big-participate:hover {
    background-color: #ff1a1a;
}
/* =============================
* HERO (INTRO) SECTION
* ============================== */

#hero {
    margin-top: -60px;
    padding-top: 50px;
    padding-bottom: 15px;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOo2sFQDwAElAGyy5g1dAAAAABJRU5ErkJggg==), url("assets/2016_4.jpg");
    background-size: cover;
    background-position: center;
}
#hero h1 {
    text-align: left;
    margin-top: 305px;
    z-index: 999;
    color: #FFF;
    font-size: 3em;
    text-transform: uppercase;
    max-width: 600px;
}
@media screen and (max-width: 768px) {
    #hero h1 {
        margin-top: 60px;
    }
}
#hero p {
    color: #FFF;
    margin-right: 50px;
    text-align: left;
    margin-bottom: 45px;
}
@media screen and (max-width: 768px) {
    #hero p {
        margin-left: 0;
    }
}
@media screen and (max-width: 480px) {
    #hero h1 {
        margin-top: 65px !important;
        font-size: 2em !important;
        max-width: 400px !important;
    }
}
/* =============================
* PARTNERS SECTION
* ============================== */

#partners {
    color: #FFF;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOo2sFQDwAElAGyy5g1dAAAAABJRU5ErkJggg==), url("assets/2016_2.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
#partners h2 {
    color: #FFF;
    margin-top: 0px;
    padding-top: 40px;
    padding-bottom: 20px;
}
#partners .partners-gallery {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
}
#partners .partners-gallery .sponsor {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 15px;
    max-height: 100px;
    margin-bottom: 25px;
    opacity: 0.85;
    max-width: 200px;
}
#partners .partners-gallery .sponsor:hover {
    opacity: 1;
}
#partners .partner-desc a {
    color: #FFF;
}
/* =============================
* PROJECTS SECTION
* ============================== */

#projects {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
#projects h2 {
    margin-top: 0px;
    padding-top: 40px;
    padding-bottom: 20px;
}
#projects .project:nth-child(odd), #projects .project:nth-child(odd) h3 {
    text-align: right;
}
#projects .project:nth-child(odd) .project-info {
    flex-direction: row-reverse;
}
#projects .project-partners {
    margin: 5px;
}
#projects .partner {
    max-height: 30px;
    margin: 5px;
    opacity: 0.85;
    filter: invert(100%);
}
#projects .partner:hover {
    opacity: 1;
}
/* =============================
* VIDEO SECTION
* ============================== */

#video {
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: #FFF;
}
#video .videowrapper {
    position: relative;
    padding-bottom: 53.55%;
    /* 16:9 */
    
    padding-top: 25px;
    height: 0;
}
#video .player .video-wrapper {
    background: #FFF !important;
}
#video iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
/* =============================
* LOCATION SECTION
* ============================== */

#location {
    color: #FFF;
    padding-bottom: 45px;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOo2sFQDwAElAGyy5g1dAAAAABJRU5ErkJggg==), url("assets/2016_3.jpg");
    background-size: cover;
    min-height: 600px;
}
@media screen and (max-width: 480px) {
    #location {
        min-height: 500px;
    }
}
#location h2 {
    margin: 0;
    padding-top: 40px;
    padding-bottom: 15px;
}
#location .tagline {
    text-align: center;
    margin-bottom: 25px;
    margin-top: 0;
}
/* ... */

